# Quadruped-Robot-using-CHAMP-ROS2-

./: .gitignore  README.md
install/champbot_nodes/share/ament_index/resource_index/package_run_dependencies/: champbot_nodes
install/champbot_nodes/share/champbot_nodes/: package.xml
install/champbot_nodes/share/champbot_nodes/urdf/: robot.urdf.xacro
install/quadbot_config/share/ament_index/resource_index/parent_prefix_path/: quadbot_config
install/quadbot_config/share/quadbot_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quadbot_config/share/quadbot_config/cmake/: quadbot_configConfig.cmake
install/quadbot_config/share/quadbot_config/config/autonomy/: navigation.yaml
install/quadbot_config/share/quadbot_config/config/gait/: gait.yaml
install/quadbot_config/share/quadbot_config/launch/: gazebo_rviz.launch.py  nav2.launch.py
log/: latest_build
src/champbot_nodes/urdf/: robot.urdf.xacro  robot_no_lidar_viz.urdf.xacro
src/quadbot_config/: CMakeLists.txt  package.xml
src/quadbot_config/config/ros_control/: ros_control.yaml
src/quadbot_config/launch/: bringup.launch.py  gazebo.launch.py  gazebo_open.launch.py
